--- a/RSWDS/RSWDS.ioc
+++ b/RSWDS/RSWDS.ioc
@@ -54,38 +54,46 @@ KeepUserPlacement=true
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
+Mcu.IP10=USART6
 Mcu.IP2=I2C1
 Mcu.IP3=I2C3
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=USART2
-Mcu.IP8=USART6
-Mcu.IPNb=9
+Mcu.IP6=SPI3
+Mcu.IP7=SYS
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=11
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA5
-Mcu.Pin11=PC6
-Mcu.Pin12=PC7
-Mcu.Pin13=PC9
-Mcu.Pin14=PA8
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PB3
-Mcu.Pin18=PB8
-Mcu.Pin19=PB9
+Mcu.Pin10=PA4
+Mcu.Pin11=PA5
+Mcu.Pin12=PC6
+Mcu.Pin13=PC7
+Mcu.Pin14=PC9
+Mcu.Pin15=PA8
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin20=PC10
+Mcu.Pin21=PC11
+Mcu.Pin22=PC12
+Mcu.Pin23=PB3
+Mcu.Pin24=PB8
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_SYS_VS_Systick
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA4
-Mcu.PinsNb=21
+Mcu.Pin7=PC2
+Mcu.Pin8=PA2
+Mcu.Pin9=PA3
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -105,15 +113,22 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=ROTATION_RX
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.Locked=true
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=PC_DEBUG_TX
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
-PA3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
+PA3.GPIO_Label=PC_DEBUG_RX
 PA3.GPIO_Mode=GPIO_MODE_AF_PP
 PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -132,18 +147,44 @@ PA5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA5.GPIO_PuPd=GPIO_PULLUP
 PA5.Locked=true
 PA5.Signal=GPXTI5
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=VL53L1X_SCL
 PA8.Mode=I2C
 PA8.Signal=I2C3_SCL
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=ROTATION_TX
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=VL53L0X_SCL
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=VL53L0X_SDA
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=SHARP_SMALL_1_ADC
 PC0.Signal=ADCx_IN10
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=SHARP_SMALL_2_ADC
 PC1.Signal=ADCx_IN11
+PC10.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=SONAR_SCK
+PC10.Mode=Full_Duplex_Master
+PC10.Signal=SPI3_SCK
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=SONAR_MISO
+PC11.Mode=Full_Duplex_Master
+PC11.Signal=SPI3_MISO
+PC12.GPIOParameters=GPIO_Label
+PC12.GPIO_Label=SONAR_MOSI
+PC12.Mode=Full_Duplex_Master
+PC12.Signal=SPI3_MOSI
 PC13-ANTI_TAMP.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
 PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PC13-ANTI_TAMP.GPIO_PuPd=GPIO_NOPULL
@@ -155,10 +196,19 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=SHARP_BIG_ADC
+PC2.Signal=ADCx_IN12
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=TFMini_TX
 PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=TFMini_RX
 PC7.Mode=Asynchronous
 PC7.Signal=USART6_RX
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=VL53L1X_SDA
 PC9.Mode=I2C
 PC9.Signal=I2C3_SDA
 PCC.Checker=false
@@ -202,7 +252,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_USART6_UART_Init-USART6-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_USART6_UART_Init-USART6-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_SPI3_Init-SPI3-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -236,12 +286,20 @@ SH.ADCx_IN10.0=ADC1_IN10,IN10
 SH.ADCx_IN10.ConfNb=1
 SH.ADCx_IN11.0=ADC1_IN11,IN11
 SH.ADCx_IN11.ConfNb=1
+SH.ADCx_IN12.0=ADC1_IN12,IN12
+SH.ADCx_IN12.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
+SPI3.Direction=SPI_DIRECTION_2LINES
+SPI3.IPParameters=VirtualType,Mode,Direction
+SPI3.Mode=SPI_MODE_MASTER
+SPI3.VirtualType=VM_MASTER
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode,Mode
