--- a/RSWDS/RSWDS.ioc
+++ b/RSWDS/RSWDS.ioc
@@ -1,5 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_10
+ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_11
+ADC1.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_12
 ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV8
 ADC1.ContinuousConvMode=ENABLE
@@ -10,14 +11,16 @@ ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
 ADC1.EnableAnalogWatchDog=false
 ADC1.ExternalTrigConv=ADC_SOFTWARE_START
 ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
-ADC1.IPParameters=NbrOfConversionFlag,master,Channel-9\#ChannelRegularConversion,ClockPrescaler,ContinuousConvMode,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,NbrOfConversion,DMAContinuousRequests,SamplingTime-9\#ChannelRegularConversion,Resolution,DataAlign,ScanConvMode,DiscontinuousConvMode,EOCSelection,ExternalTrigConv,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Rank-9\#ChannelRegularConversion
+ADC1.IPParameters=NbrOfConversionFlag,master,Channel-9\#ChannelRegularConversion,ClockPrescaler,ContinuousConvMode,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,NbrOfConversion,DMAContinuousRequests,SamplingTime-9\#ChannelRegularConversion,Resolution,DataAlign,ScanConvMode,DiscontinuousConvMode,EOCSelection,ExternalTrigConv,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Rank-9\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion
 ADC1.InjNumberOfConversion=0
-ADC1.NbrOfConversion=2
+ADC1.NbrOfConversion=3
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-11\#ChannelRegularConversion=2
+ADC1.Rank-12\#ChannelRegularConversion=3
 ADC1.Rank-9\#ChannelRegularConversion=1
 ADC1.Resolution=ADC_RESOLUTION_12B
 ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-12\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 ADC1.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 ADC1.ScanConvMode=ENABLE
 ADC1.master=1
@@ -33,7 +36,8 @@ Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=ADC1
 Dma.Request1=USART6_RX
-Dma.RequestsNb=2
+Dma.Request2=USART6_TX
+Dma.RequestsNb=3
 Dma.USART6_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART6_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART6_RX.1.Instance=DMA2_Stream1
@@ -44,6 +48,16 @@ Dma.USART6_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART6_RX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.USART6_RX.1.Priority=DMA_PRIORITY_LOW
 Dma.USART6_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART6_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_TX.2.Instance=DMA2_Stream6
+Dma.USART6_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART6_TX.2.Mode=DMA_NORMAL
+Dma.USART6_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.USART6_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 I2C1.I2C_Mode=I2C_Fast
 I2C1.IPParameters=I2C_Mode
@@ -70,22 +84,25 @@ Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA4
 Mcu.Pin11=PA5
-Mcu.Pin12=PC6
-Mcu.Pin13=PC7
-Mcu.Pin14=PC9
-Mcu.Pin15=PA8
-Mcu.Pin16=PA9
-Mcu.Pin17=PA10
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
+Mcu.Pin12=PB13
+Mcu.Pin13=PC6
+Mcu.Pin14=PC7
+Mcu.Pin15=PC9
+Mcu.Pin16=PA8
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA11
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PC10
-Mcu.Pin21=PC11
-Mcu.Pin22=PC12
-Mcu.Pin23=PB3
-Mcu.Pin24=PB8
-Mcu.Pin25=PB9
-Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin20=PA12
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PC10
+Mcu.Pin24=PC11
+Mcu.Pin25=PC12
+Mcu.Pin26=PB3
+Mcu.Pin27=PB8
+Mcu.Pin28=PB9
+Mcu.Pin29=VP_SYS_VS_Systick
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC0
@@ -93,7 +110,7 @@ Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=27
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -102,6 +119,7 @@ MxDb.Version=DB.4.0.270
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true
@@ -112,11 +130,26 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.USART6_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=ROTATION_RX
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PA11.GPIO_Label=VL53L0X_trigger
+PA11.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA11.Locked=true
+PA11.PinState=GPIO_PIN_SET
+PA11.Signal=GPIO_Output
+PA12.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PA12.GPIO_Label=LASER
+PA12.GPIO_PuPd=GPIO_NOPULL
+PA12.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA12.Locked=true
+PA12.PinState=GPIO_PIN_SET
+PA12.Signal=GPIO_Output
 PA13.Locked=true
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
@@ -155,6 +188,12 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=ROTATION_TX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB13.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PB13.GPIO_Label=VL53L1X_trigger
+PB13.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB13.Locked=true
+PB13.PinState=GPIO_PIN_SET
+PB13.Signal=GPIO_Output
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
 PB8.GPIOParameters=GPIO_Label
@@ -303,7 +342,7 @@ USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode,Mode
-USART6.Mode=MODE_RX
+USART6.Mode=MODE_TX_RX
 USART6.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
