--- a/RSWDS/RSWDS.ioc
+++ b/RSWDS/RSWDS.ioc
@@ -84,33 +84,37 @@ Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA4
 Mcu.Pin11=PA5
-Mcu.Pin12=PB13
-Mcu.Pin13=PC6
-Mcu.Pin14=PC7
-Mcu.Pin15=PC9
-Mcu.Pin16=PA8
-Mcu.Pin17=PA9
-Mcu.Pin18=PA10
-Mcu.Pin19=PA11
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PB13
+Mcu.Pin15=PC6
+Mcu.Pin16=PC7
+Mcu.Pin17=PC9
+Mcu.Pin18=PA8
+Mcu.Pin19=PA9
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA12
-Mcu.Pin21=PA13
-Mcu.Pin22=PA14
-Mcu.Pin23=PC10
-Mcu.Pin24=PC11
-Mcu.Pin25=PC12
-Mcu.Pin26=PB3
-Mcu.Pin27=PB8
-Mcu.Pin28=PB9
-Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin20=PA10
+Mcu.Pin21=PA11
+Mcu.Pin22=PA12
+Mcu.Pin23=PA13
+Mcu.Pin24=PA14
+Mcu.Pin25=PC10
+Mcu.Pin26=PC11
+Mcu.Pin27=PC12
+Mcu.Pin28=PB3
+Mcu.Pin29=PB6
 Mcu.Pin3=PH0 - OSC_IN
+Mcu.Pin30=PB7
+Mcu.Pin31=PB8
+Mcu.Pin32=PB9
+Mcu.Pin33=VP_SYS_VS_Systick
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=30
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -138,13 +142,13 @@ PA10.GPIO_Label=ROTATION_RX
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA11.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PA11.GPIO_Label=VL53L0X_trigger
+PA11.GPIO_Label=VL53L0X_TRIGGER
 PA11.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA11.Locked=true
 PA11.PinState=GPIO_PIN_SET
 PA11.Signal=GPIO_Output
 PA12.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
-PA12.GPIO_Label=LASER
+PA12.GPIO_Label=LASER_TRIGGER
 PA12.GPIO_PuPd=GPIO_NOPULL
 PA12.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA12.Locked=true
@@ -180,6 +184,18 @@ PA5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA5.GPIO_PuPd=GPIO_PULLUP
 PA5.Locked=true
 PA5.Signal=GPXTI5
+PA6.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PA6.GPIO_Label=SHARP_BIG_TRIGGER
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA6.Locked=true
+PA6.PinState=GPIO_PIN_SET
+PA6.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PA7.GPIO_Label=SHARP_SMALL_2_TRIGGER
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA7.Locked=true
+PA7.PinState=GPIO_PIN_SET
+PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=VL53L1X_SCL
 PA8.Mode=I2C
@@ -189,13 +205,25 @@ PA9.GPIO_Label=ROTATION_TX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB13.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PB13.GPIO_Label=VL53L1X_trigger
+PB13.GPIO_Label=VL53L1X_TRIGGER
 PB13.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB13.Locked=true
 PB13.PinState=GPIO_PIN_SET
 PB13.Signal=GPIO_Output
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB6.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PB6.GPIO_Label=SHARP_SMALL_1_TRIGGER
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB6.Locked=true
+PB6.PinState=GPIO_PIN_SET
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PB7.GPIO_Label=TFMini_TRIGGER
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB7.Locked=true
+PB7.PinState=GPIO_PIN_RESET
+PB7.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=VL53L0X_SCL
 PB8.Locked=true
